implemented further requests for change made by ethics

--- a/locales/de.yml
+++ b/locales/de.yml
@@ -1,6 +1,6 @@
 ---
 de:
-  aboutTheStudy: Über die Studie
+  aboutTheStudy: Informationen für Teilnehmende
   age: Alter
   behaviorPrompt: >-
     Bitten wählen Sie die Option aus, welche am besten Ihre derzeitige Situation
