--- a/locales/en.yml
+++ b/locales/en.yml
@@ -1,6 +1,6 @@
 ---
 en:
-  aboutTheStudy: About the study
+  aboutTheStudy: Information for participants
   age: Age
   behaviorPrompt: 'Please select the option that most resembles your current situation:'
   behaviors:
