--- a/locales/fr.yml
+++ b/locales/fr.yml
@@ -1,6 +1,6 @@
 ---
 fr:
-  aboutTheStudy: À propos de l'étude
+  aboutTheStudy: Information aux participants
   age: Tranche d'âge
   behaviorPrompt: >-
     Veuillez sélectionner l'option qui ressemble le plus à votre situation
