--- a/locales/de.yml
+++ b/locales/de.yml
@@ -1,6 +1,6 @@
 ---
 de:
-  aboutTheStudy: Informationen für Teilnehmende
+  aboutTheStudy: Information für Teilnehmende
   age: Alter
   behaviorPrompt: >-
     Bitten wählen Sie die Option aus, welche am besten Ihre derzeitige Situation
