Testing fixing issue #6 by creating a proper 404 page, telling Netlify to redirect to language-aware error pages, and preventing the language redirect code from redirecting on a 404.

--- a/locales/de.yml
+++ b/locales/de.yml
@@ -168,3 +168,4 @@ de:
   worksInHealth: Arbeiten Sie im Gesundheitssystem mit PatientInnen?
   yesAnswer: Ja
   zip: Postleitzahl
+  pageNotFound: Seite nicht gefunden
