--- a/locales/en.yml
+++ b/locales/en.yml
@@ -160,3 +160,4 @@ en:
   worksInHealth: Do you work with patients in the healthcare system?
   yesAnswer: 'Yes'
   zip: Postal code
+  pageNotFound: Page not found
