--- a/locales/fr.yml
+++ b/locales/fr.yml
@@ -169,3 +169,4 @@ fr:
   worksInHealth: Travaillez-vous dans le système de santé avec des patients ?
   yesAnswer: 'Yes'
   zip: Code postal
+  pageNotFound: Page non trouvée
