--- a/locales/it.yml
+++ b/locales/it.yml
@@ -166,3 +166,4 @@ it:
   worksInHealth: Lavora nel sistema sanitario con i pazienti?
   yesAnswer: Si
   zip: Codice Postale
+  pageNotFound: Pagina non trovata
