--- a/locales/it.yml
+++ b/locales/it.yml
@@ -167,3 +167,9 @@ it:
   yesAnswer: Si
   zip: Codice Postale
   pageNotFound: Pagina non trovata
+  mailingList:
+    header: Iscriviti alla mailing list
+    body: Iscriviti alla nostra mailing list per rimanere aggiornato sugli sviluppi.
+    warning: Questo indirizzo e-mail non verrà inviato a terzi né collegato ai dati del sondaggio in alcun modo.
+    join: Invia
+  emailAddress: indirizzo email
