since when? and yes/no in french

--- a/locales/de.yml
+++ b/locales/de.yml
@@ -139,13 +139,13 @@ de:
   shareby: Teilen via
   shareon: Teilen auf
   showMoreComorbidities: Mehr anzeigen...
-  sinceHowManyDays: Seit wievielen Tagen?
+  sinceHowManyDays: Seit wann?
   smokeOrVape: Rauchen oder Vapen Sie?
   spain: Spanien
   supportedBy: In Zusammenarbeit mit
   symptoms:
     coughing: Husten
-    diarrhea: Diarrhea
+    diarrhea: Durchfall
     dyspnea: Atembeschwerden
     fever: Fieber über 38 Grad
     headache: Kopfschmerzen
