--- a/locales/it.yml
+++ b/locales/it.yml
@@ -137,13 +137,13 @@ it:
   shareby: Condividi via
   shareon: Condividi su
   showMoreComorbidities: Mostra di più...
-  sinceHowManyDays: Quanti giorni?
+  sinceHowManyDays: Da quando?
   smokeOrVape: Fuma o utilizza sigarette elettroniche?
   spain: Spagna
   supportedBy: Supportato da
   symptoms:
     coughing: Tosse
-    diarrhea: Diarrhea
+    diarrhea: Diarrea
     dyspnea: Difficoltà di respirazione
     fever: Febbre oltre i 38 gradi
     headache: Mal di testa
