added french corrections

--- a/locales/de.yml
+++ b/locales/de.yml
@@ -174,4 +174,5 @@ de:
     body: Bitte melden Sie sich für unsere Mailingliste an, um über die Entwicklungen auf dem Laufenden zu bleiben.
     warning: Diese E-Mail-Adresse wird weder an Dritte gesendet noch in irgendeiner Weise mit Ihren Umfragedaten verbunden.
     join: Abschicken
+    cancel: Abbrechen
   emailAddress: E-Mail-Adresse
