--- a/locales/de.yml
+++ b/locales/de.yml
@@ -116,7 +116,7 @@ de:
   noAnswer: Nein
   noinformation: Keine Angabe
   nonTestReason: Haben Sie ärztlichen Rat eingeholt?
-  notKnownAnswer: 'Nicht, dass ich davon Wüste'
+  notKnownAnswer: 'Nicht, dass ich wüsste'
   other: Andere
   participantCode: (Optional) Ihr Teilnahmecode
   partners: Partner
