added link to calendar entries and corrected to daily

--- a/locales/de.yml
+++ b/locales/de.yml
@@ -102,8 +102,7 @@ de:
     dient diese Kampagne.</p> <p><b>Egal ob Sie krank sind oder gesund, infiziert
     oder nicht: Ihre Daten können helfen, Leben zu retten.</b> Wenn Sie das
     untenstehende Formular ausfüllen, tragen Sie dazu bei, dass wir diese Krise
-    gemeinsam meistern können.  Im Idealfall wiederholen Sie Ihre Teilnahme im
-    Wochentakt (<a href="/images/covidtracker.ics">Kalendererinnerung
+    gemeinsam meistern können. Im Idealfall wiederholen Sie Ihre Teilnahme täglich (<a href="/images/covidtracker.ics">Kalendererinnerung
     einrichten</a>).</p> <p>Wichtig: Wir verwenden die erfassten Daten nicht, um
     Rückschlüsse auf einzelne Personen zu ziehen.</p>
   italy: Italien
