--- a/locales/fr.yml
+++ b/locales/fr.yml
@@ -103,7 +103,7 @@ fr:
     malade ou en bonne santé, infecté-e ou non : Vos données peuvent aider à
     sauver des vies.</b> En remplissant le formulaire ci-dessous, vous participez
     à l’effort commun pour venir à bout de cette crise. L’idéal serait que vous
-    renouveliez votre participation chaque semaine.</p> <p>Important: les données
+    renouveliez votre participation du quotidien (<a href="/images/covidtracker.ics">Configurer un rappel de calendrier</a>).</p> <p>Important: les données
     récoltées sont anonyme et ne peuvent pas être associées à des personnes.</p>
   italy: Italie
   leavingHomeForWork: Quittez-vous actuellement votre domicile pour travailler?
