--- a/locales/it.yml
+++ b/locales/it.yml
@@ -97,7 +97,7 @@ it:
     meno: I suoi dati possono contribuire a salvare vite umane.</b> Con la
     compilazione del modulo sottostante, può fornire il suo contributo, affinché
     possiamo superare insieme questa crisi. L’ideale sarebbe poter partecipare a
-    cadenza settimanale.</p> <p>Importante: il rilevamento dei dati garantisce
+    quotidianamente (<a href="/images/covidtracker.ics">Imposta un promemoria del calendario</a>).</p> <p>Importante: il rilevamento dei dati garantisce
     l’anonimato e non consente di trarre conclusioni sulla sua identità.</p>
   italy: Italia
   leavingHomeForWork: Al momento attuale esce di casa solo per andare al lavoro?
