--- a/locales/fr.yml
+++ b/locales/fr.yml
@@ -201,3 +201,16 @@ fr:
     daily: Du quotidien
     weekly: Hebdomadaire
     total: Total
+  pressKit:
+    header: Nouvelles et matériel promotionnel
+    infoText: Voici un aperçu du matériel d'information et de promotion. Vous pouvez télécharger tous les documents <a href="/images/presskit/full_presskit.zip"> ici </a> ou les consulter ci-dessous. Comme toujours, n'hésitez pas à <a href="mailto:info@covid19survey.ch"> nous contacter <a>.
+    faq: Téléchargez un PDF de notre FAQ
+    interview: Entretien avec bodenseetv.ch
+    poster: Affiche promotionnelle A4
+    bernPress: Communiqué de presse du canton de Berne
+    ethzPress: Communiqué de presse de l'ETH Zurich
+    preprint: Article préimprimé avec le consortium international d'enquête COVID-19.
+    strongerTogether: Des images promotionnelles plus fortes ensemble
+    needABreak: Besoin d'une pause Images promotionnelles
+    radio: Radiospot de RTS
+  pressKitFooter: Press Kit
